// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoverMenuSimpleExample renders color 1`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="Select Color"
    class="w-full"
    id="headlessui-menu-button-1"
    type="button"
  >
    <div
      class=" justify-left relative inline-flex w-full rounded-md bg-black bg-opacity-20 px-4 py-2 text-sm font-medium text-white hover:bg-opacity-30 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
    >
      Green
    </div>
  </button>
</DocumentFragment>
`;

exports[`HoverMenuSimpleExample renders color 2`] = `
<DocumentFragment>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    aria-label="Select Color"
    class="w-full"
    id="headlessui-menu-button-1"
    type="button"
  >
    <div
      class=" justify-left relative inline-flex w-full rounded-md bg-black bg-opacity-20 px-4 py-2 text-sm font-medium text-white hover:bg-opacity-30 focus-visible:ring-2 focus-visible:ring-white focus-visible:ring-opacity-75 "
    >
      Red
    </div>
  </button>
</DocumentFragment>
`;
